fixed dark mode implementation of chat

--- a/frontend/less/dark.less
+++ b/frontend/less/dark.less
@@ -6,7 +6,7 @@
   color: white;
 }
 
-chat-msg.right.dark {
+#chat.dark > .chat-msg.right {
   background: @default-color;
   color: @dark-color;
 }
